src/styles/_app.scss
@use './mixins' as *;

.tv-container {
    height: 147px;
    top: 85px;
    left: -20px;
    width: 130px;

    @include up(sm) { 
        height: 480px; 
        top: 300px;
        left: 100px;
        width: 430px;
    }
}

.boulder{
  top: 65px;
  width: 125px;
    @include up(sm) {  
        top: 200px;
        width: 425px;
    }
}

.tv {
  left: 15px;
  width: 100px;
    @include up(sm) {  
        left: 60px;
        width: 325px;
    }
}

.static {
    top: 6px;
    left: -2px;
    transform: perspective(800px) rotateY(50deg) rotateZ(0.7deg);
    width: 140px;
    height: 61px;
    @include up(sm) {  
        top: 22px;
        left: 6px;
        transform: perspective(2500px) rotateY(50deg) rotateZ(0.5deg);
        width: 454px;
        height: 194px;
  }
}

.cabinet-container {
    right: 10px;
    top: 10px;
    @include up(sm) {  
        top: 100px;
        right: 100px;
    }
}

.gold {
  top: 555px;
  left: 280px;
}

.airpod-pro {
  top: 569px;
  left: 340px;
}

.buddha {
  top: 534px;
  left: 400px;
}
.ego {
  top: 268px;
  left: 300px;
}
.remote {
  transform: rotate(20deg);
}

